--- a/views/products.pug
+++ b/views/products.pug
@@ -7,6 +7,7 @@ html
                     td=p.id
                     td=p.name
                     td=p.price
+                    td=p.category_name
                     td
                         a(href="/edit/"+p.id) Edit product
                     if userRole==="ADMIN"
