Added register button to /auth, fixed bugs with user permissions

--- a/views/auth.pug
+++ b/views/auth.pug
@@ -9,4 +9,6 @@ html
             input(type = "password" name="password")
             br
             input(type = "submit" value="login")
+            br
+            a(href="/register") Register
         h3=message
