--- a/views/editProduct.pug
+++ b/views/editProduct.pug
@@ -1,5 +1,6 @@
 html
     head
+        link(rel="stylesheet" href="/css/style.css")
     body
         form(action = "/editProduct" method="POST")
             label id
