--- a/views/productForm.pug
+++ b/views/productForm.pug
@@ -1,12 +1,19 @@
 html
     head
+        link(rel="stylesheet" href="/css/style.css")
     body
-        form(action = "/createProduct" method="POST")
+        form(action = "/createProduct" method="POST" enctype="multipart/form-data")
             label name
             input(name="name" type="text" required)
             br
             label Price:
             input(name="price" type="number" required)
+            br
+            label main_file
+            input(name="main_file" type="file" required)
+            br
+            label other_files
+            input(name="other_files" type="file" required multiple)
             br
             select(name="category") Category
                 each c in categories
