--- a/views/productForm.pug
+++ b/views/productForm.pug
@@ -13,7 +13,7 @@ html
             input(name="main_file" type="file" required)
             br
             label other_files
-            input(name="other_files" type="file" required multiple)
+            input(name="other_files" type="file" required multiple="true")
             br
             select(name="category") Category
                 each c in categories
